--- a/views/index.html
+++ b/views/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Mon Projet</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
   <h1>Green Escape</h1>
-  <script src="scripts.js"></script>
+  <script src="../scripts/scripts.js"></script>
 </body>
 </html>
