--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,134 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Jersey 15", sans-serif;
     background-color: #f0f0f0;
+    text-shadow: 1px 1px 1px rgb(95, 60, 14);
+    letter-spacing: 2px;
+    color:rgb(89, 187, 97);
   }
 
-h1{
-    color:green;
+header{
+  font-size:200%;
+  height:100px;
+}
+
+.a:hover{
+  color: #2e8b57;;
+}
+
+.parentHeader {
+  display: grid;
+  grid-template-columns: 10% 30% 60%;
+  grid-template-rows: 20%;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
 }
   
+.logoHeader { 
+  grid-area: 1 / 1 / 2 / 2;
+
+}
+.logoHeader .logo { 
+  height:100%;
+
+}
+
+.titleHeader{
+  grid-area: 1 / 2 / 2 / 3;
+
+  align-self: center;
+}
+
+.navParameters { 
+  grid-area: 1 / 3 / 2 / 4;
+
+  text-align: right;
+  align-items: center;
+  align-self: center;
+}
+
+.parentGame{
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  }
+  
+.gameDiv {
+  grid-area: 2 / 2 / 6 / 5;
+  height:500px;
+  border: 2px solid black;
+  text-align: center;
+}
+
+.scoresDiv {
+   grid-area: 2 / 6 / 6 / 7;
+   height:500px;
+   border: 2px solid black;
+   text-align: center;
+   margin-right:5%;
+}
+
+.replayButtonDiv{
+  grid-area: 6 / 2 / 6 / 2;
+  padding-top: 10px;
+}
+
+.seedButtonDiv{
+  grid-area: 6 / 3 / 6 / 3;
+  padding-top: 15px;
+  text-align: center;
+ 
+}
+
+.button {
+  width: 100%;
+  background-color:rgb(89, 187, 97);
+  border: none;
+  border-radius: 3px;
+  color: white;
+  padding: 15px;
+  text-align: center;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  font-family: "Jersey 15", sans-serif;
+  letter-spacing: 2px;
+  font-size:x-large;
+}
+.button:hover{
+  background-color: #2e8b57;;
+  border-color: #2e8b57;
+  box-shadow: 0 0 5px #2e8b57;
+}
+
+
+input[type="number"] {
+  width: 70%;
+  padding: 10px 15px;
+  font-size: 16px;
+  border: 2px solid #59bb61;
+  border-radius: 8px;
+  outline: none;
+  background-color: #f9f9f9;
+  color: #333;
+  transition: all 0.3s ease;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+}
+
+input[type="number"]:focus {
+  border-color: #2e8b57;
+  box-shadow: 0 0 5px #2e8b57;
+}
+
+
+
+
+
+
+
+footer{
+  text-align: center;
+  font-size: small;
+}
