--- a/views/index.html
+++ b/views/index.html
@@ -4,9 +4,48 @@
   <meta charset="UTF-8">
   <title>Mon Projet</title>
   <link rel="stylesheet" href="../styles/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Jersey+15&display=swap" rel="stylesheet">
 </head>
+
 <body>
-  <h1>Green Escape</h1>
-  <script src="../scripts/scripts.js"></script>
+  <header>
+    <div class="parentHeader">
+
+      <div class="logoHeader"> 
+        <img class="logo" src="../images/logoGreenEscape.png">
+      </div>
+
+      <div class="titleHeader">
+        <h1>Green Escape</h1>
+      </div>
+
+      <div class="navParameters">
+        <a>Hub</a>
+        <a>Profile</a>
+        <a>Scoreboard</a>
+      </div>
+      
+    </div>
+  </header>
+
+  <div class="parentGame">
+    <div class="gameDiv">
+      <h1>Jeu</h1>
+    </div>
+    <div class="replayButtonDiv">
+      <button class="button">Replay</button>
+    </div>
+    <div class="seedButtonDiv">
+      <input type="number" id="seed" name="seed" min="0" max="99999999999" placeholder="Enter a seed">
+    </div>
+    <div class="scoresDiv"> 
+      <h1>Score</h1>
+    </div>
+
+  </div>
+
+  <footer>Green Escape, All Rights Reserved® - 2025</footer>
 </body>
 </html>
