--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,10 +40,10 @@ header{
 
 .navParameters { 
   grid-area: 1 / 3 / 2 / 4;
-
   text-align: right;
   align-items: center;
   align-self: center;
+  padding-right: 10px;
 }
 
 .parentGame{
@@ -57,7 +57,6 @@ header{
 .gameDiv {
   grid-area: 2 / 2 / 6 / 5;
   height:500px;
-  border: 2px solid black;
   text-align: center;
 }
 
@@ -121,11 +120,6 @@ input[type="number"]:focus {
   border-color: #2e8b57;
   box-shadow: 0 0 5px #2e8b57;
 }
-
-
-
-
-
 
 
 footer{
