--- a/views/index.html
+++ b/views/index.html
@@ -36,7 +36,7 @@
       <h1>Jeu</h1>
     </div>
     <div class="replayButtonDiv">
-      <button class="button">Replay</button>
+      <button class="button">Play</button>
     </div>
     <div class="seedButtonDiv">
       <input type="number" id="seed" name="seed" min="0" max="99999999999" placeholder="Enter a seed">
