--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,6 @@
 <body>
   <header>
     <div class="parentHeader">
-
       <div class="logoHeader"> 
         <img class="logo" src="../images/logoGreenEscape.png">
       </div>
@@ -23,9 +22,9 @@
       </div>
 
       <div class="navParameters">
-        <a>Hub</a>
-        <a>Profile</a>
-        <a>Scoreboard</a>
+        <a href="index.html">Hub</a>
+        <a href="profile.html">Profile</a>
+        <a href="scoreboard.html">Scoreboard</a>
       </div>
       
     </div>
