--- a/backend/GreenEscape-backend/api/templates/views/index.html
+++ b/backend/GreenEscape-backend/api/templates/views/index.html
@@ -1,34 +1,30 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Mon Projet</title>
-  {% load static %}
-  <link rel="stylesheet" href="{% static 'myapp/css/styles.css' %}">
+  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jersey+15&display=swap" rel="stylesheet">
-  <script src="../scripts/scripts.js" defer></script>
+  <script src="{% static 'scripts/scripts.js' %}" defer></script>
 </head>
 
 <body>
   <header>
     <div class="parentHeader">
-
-      <div class="logoHeader"> 
-        <img class="logo" src="../images/logoGreenEscape.png">
+      <div class="logoHeader">
+        <img class="logo" src="{% static 'images/logoGreenEscape.png' %}">
       </div>
-
       <div class="titleHeader">
         <h1>Green Escape</h1>
       </div>
-
       <div class="navParameters">
         <a>Hub</a>
         <a>Profile</a>
         <a>Scoreboard</a>
       </div>
-      
     </div>
   </header>
   <div class="parentGame">
@@ -41,12 +37,10 @@
     <div class="seedButtonDiv">
       <input type="number" id="seed" name="seed" min="0" max="99999999999" placeholder="Enter a seed">
     </div>
-    <div class="scoresDiv"> 
+    <div class="scoresDiv">
       <h1>Score</h1>
     </div>
-
   </div>
-
   <footer>Green Escape, All Rights Reserved® - 2025</footer>
 </body>
 </html>
