--- a/backend/GreenEscape-backend/api/templates/views/login.html
+++ b/backend/GreenEscape-backend/api/templates/views/login.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -27,7 +28,7 @@
             const username = document.getElementById("username").value;
             const password = document.getElementById("password").value;
 
-            const response = await fetch("/api/login/", {
+            const response = await fetch("/api/login/", {  // Ajoute un "/" devant api
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({ username, password })
