--- a/backend/GreenEscape-backend/api/templates/views/login.html
+++ b/backend/GreenEscape-backend/api/templates/views/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connexion</title>
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="{% static 'css/register.css' %}">
 </head>
 <body>
     <h2>Connexion</h2>
