--- a/backend/GreenEscape-backend/api/templates/views/index.html
+++ b/backend/GreenEscape-backend/api/templates/views/index.html
@@ -24,7 +24,7 @@
       </div>
       <div class="navParameters">
         <a href="index.html">Hub</a>
-        <a href="profile.html">Profile</a>
+        <a href="#" onclick="window.location.href='/api/profile/'">Profil</a>
         <a href="scoreboard.html">Scoreboard</a>
       </div>
     </div>
