--- a/backend/GreenEscape-backend/api/templates/views/index.html
+++ b/backend/GreenEscape-backend/api/templates/views/index.html
@@ -25,7 +25,7 @@
       <div class="navParameters">
         <a href="index.html">Hub</a>
         <a href="#" onclick="window.location.href='/api/profile/'">Profil</a>
-        <a href="scoreboard.html">Scoreboard</a>
+        <a href="#" onclick="window.location.href='/api/scoreboard/'">Scoreboard</a>
       </div>
     </div>
   </header>
