--- a/backend/GreenEscape-backend/api/templates/views/scoreboard.html
+++ b/backend/GreenEscape-backend/api/templates/views/scoreboard.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Green Escape - Scoreboard</title>
-    <link rel="stylesheet" href="{% static 'css/scoreboard1.css' %}">
-    <link rel="stylesheet" href="../styles/scoreboard.css">
+    <link rel="stylesheet" href="{% static 'css/scoreboard.css' %}">
     <script src="{% static 'scripts/scripts.js' %}" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
