--- a/backend/GreenEscape-backend/api/templates/views/scoreboard.html
+++ b/backend/GreenEscape-backend/api/templates/views/scoreboard.html
@@ -16,7 +16,7 @@
     <header>
         <div class="parentHeader">
             <div class="logoHeader">
-                <img class="logo" src="../images/logoGreenEscape.png">
+                <img class="logo" src="{% static 'images/logoGreenEscape.png' %}">
             </div>
 
             <div class="titleHeader">
@@ -24,9 +24,9 @@
             </div>
 
             <div class="navParameters">
-                <a href="index.html">Hub</a>
-                <a href="profile.html">Profile</a>
-                <a href="scoreboard.html">Scoreboard</a>
+                <a href="#" onclick="window.location.href='/api/'">Game</a>
+                <a href="#" onclick="window.location.href='/api/profile/'">Profil</a>
+                <a href="#" onclick="window.location.href='/api/scoreboard/'">Scoreboard</a>
             </div>
         </div>
     </header>
