--- a/backend/GreenEscape-backend/api/templates/views/index.html
+++ b/backend/GreenEscape-backend/api/templates/views/index.html
@@ -49,7 +49,7 @@
 
   <script>
     document.getElementById("logoutButton").addEventListener("click", async () => {
-        await fetch("http://127.0.0.1:8000/api/logout/", { credentials: "include" });
+        await fetch("https://green-escape-backend.onrender.com/api/logout/", { credentials: "include" });
         window.location.href = "/api/login-page/";  // Assure la redirection correcte
     });
 </script>
