--- a/backend/GreenEscape-backend/api/templates/views/profile.html
+++ b/backend/GreenEscape-backend/api/templates/views/profile.html
@@ -71,7 +71,7 @@
             console.log("Utilisateur connecté :", user);
             // Afficher l'utilisateur sur la page
             document.getElementById("username").textContent = user.username;
-            document.getElementById("win").textContent = user.win;
+            document.getElementById("win").textContent = user.medails;
         } catch (error) {
             console.error("Erreur :", error);
         }
